# finter

./: .finter.toml.example  AGENT_GUIDE.md  Cargo.toml  README.md
.github/workflows/: publish.yml
docs/: behavior.md  tmux-integration.md  troubleshooting.md  usage.md
src/: lib.rs  main.rs
