[package]
name = "finter"
authors = ["Xi Xiao <tdxiaoxi2@gmail.com>"]
version = "0.1.19"
edition = "2021"
description = "A Tmux plugin to quickly create session for folders in configured paths."
license = "MIT OR Apache-2.0"

[dependencies]
skim = "0.10.4"
home = "0.5.5"
clap = { version = "4.4.4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
rand = "0.8"
